src/objects/Distribution_List__c.object
<CustomObject>
    <description>This object captures distribution lists, e.g. email distribution lists.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field so that we can add distribution list to the Cases.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Distribution List</relationshipLabel>
        <relationshipName>Distribution_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distribution List</relationshipLabel>
        <relationshipName>Distribution_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing List</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Distribution List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Distribution List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>